--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="#" />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap"
       rel="stylesheet"
     />
 
