Move meta description to HTML

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+    <meta
+      name="description"
+      content="A prototype address book app, tailored to the needs of academics. Written in Svelte with TypeScript."
+    />
+
     <title>Scholodex</title>
 
     <link rel="icon" href="#" />
