Do a bit of housekeeping

--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,17 @@
 
     <meta
       name="description"
-      content="A prototype address book app, tailored to the needs of academics. Written in Svelte with TypeScript."
+      content="A prototype address book app, tailored to the needs of academics. Written in Svelte with TypeScript"
     />
 
     <title>Scholodex</title>
 
     <link rel="icon" href="#" />
 
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="build/bundle.css" />
 
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="build/bundle.js"></script>
   </head>
 
   <body></body>
